--- a/index.html
+++ b/index.html
@@ -3,16 +3,132 @@ layout: default
 title: About
 ---
 
+<!-- Add this to your header -->
+<link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" /> 
+
 <img src="/assets/imagen.png" alt="Image">
 
 <b>Mario Dorado Martínez</b>
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse a libero nulla. Nam suscipit mollis ligula vitae sagittis. Sed ligula quam, sollicitudin sed elit quis, iaculis congue tellus. Donec facilisis lacus at malesuada aliquam. Nulla metus massa, molestie nec bibendum a, congue faucibus est. Nunc at urna orci. Quisque gravida velit eu neque placerat, eget tempor turpis malesuada.
+<h2>About Me</h2>
+<p>Hello! I'm Mario Dorado Martínez, a 22-year-old third-year student at <a href="https://www.citm.upc.edu/esp/estudis/graus-videojocs/">CITM UPC</a>, specializing in Game Design and Development. Alongside my primary studies, I have a background in developing multi-platform applications and system administration.</p>
 
-Cras quis augue lacinia, hendrerit purus in, blandit erat. Duis molestie, enim eu varius pellentesque, arcu neque vestibulum arcu, vitae blandit diam magna ac turpis. Ut vulputate at justo ut dignissim. Pellentesque placerat lectus purus, sed finibus erat facilisis eget. Sed sollicitudin, ipsum a condimentum mattis, erat turpis tempor enim, quis placerat neque nibh a arcu. Nullam molestie, odio sed imperdiet hendrerit, ipsum quam sollicitudin risus, sit amet efficitur nibh quam vitae sapien. Quisque ut vestibulum orci, sollicitudin posuere est. Nunc pretium commodo leo vel dignissim.
+<h2>Technical Skills</h2>
+<p>My technical skills include proficiency in <b>C++</b>, <b>C</b>, and <b>C#</b> specifically for game development. I'm also learning <b>Rust</b> with an interest in its potential for game development. Apart from these, I've worked with other programming languages:</p>
 
-Morbi eu semper massa. Nullam iaculis finibus lacinia. Nullam at maximus nibh, ac ullamcorper eros. Sed ac libero facilisis, fermentum ligula eu, vehicula sapien. Duis pharetra eros quis enim pretium tempor. Morbi laoreet sollicitudin ligula, semper auctor neque pretium in. Morbi viverra ipsum feugiat diam consequat facilisis. Nulla posuere ac dui et posuere. In in tempus neque. Aenean quis lorem quam. Sed luctus bibendum augue nec luctus. Vivamus hendrerit, neque placerat tempus blandit, libero odio varius neque, quis posuere sem elit in dui. Nam volutpat lacus vel dolor aliquam porta. Suspendisse ac tristique metus. Proin sodales mauris sit amet justo vehicula, faucibus mattis metus efficitur. Suspendisse dignissim lacinia tempor.
+<div class="skills-section">
+  <h3>Languages</h3>
+  <h4>Game Dev Languages</h4>
+  <div class="skills">
+    <div class="skill">
+      <i class="devicon-c-plain colored"></i>
+      <span><b>C</b></span>
+    </div>
+    <div class="skill">
+      <i class="devicon-cplusplus-plain colored"></i>
+      <span><b>C++</b></span>
+    </div>
+    <div class="skill">
+      <i class="devicon-csharp-plain colored"></i>
+      <span><b>C#</b></span>
+    </div>
+    <div class="skill">
+      <i class="devicon-rust-plain colored"></i>
+      <span><b>Rust</b></span>
+    </div>
+  </div>
 
-Integer luctus, enim et euismod tempus, leo mi lobortis erat, vitae malesuada orci risus nec metus. Proin dapibus nisl eget auctor varius. Quisque mollis magna a ex lobortis dapibus. Proin dapibus augue at nunc imperdiet posuere. Quisque rutrum urna id consectetur porttitor. Nulla facilisi. Etiam viverra metus et risus facilisis, id facilisis dolor ullamcorper. Maecenas vitae tristique erat, sed blandit libero. In ultricies lacus mi, quis sodales ante hendrerit id. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer blandit, arcu nec interdum condimentum, dolor ex rhoncus tortor, sed aliquam est dolor molestie sapien. Nunc at bibendum purus, non venenatis libero. Praesent rutrum dolor non efficitur aliquet.
+  <h4>Other</h4>
+  <div class="skills">
+    <div class="skill">
+      <i class="devicon-java-plain colored"></i>
+      <span><b>Java</b></span>
+    </div>
+    <div class="skill">
+      <i class="devicon-bash-plain colored"></i>
+      <span><b>Bash</b></span>
+    </div>
+    <div class="skill">
+      <i class="devicon-javascript-plain colored"></i>
+      <span><b>JavaScript</b></span>
+    </div>
+    <div class="skill">
+      <i class="devicon-python-plain colored"></i>
+      <span><b>Python</b></span>
+    </div>
+  </div>
+</div>
 
-Etiam eget libero a metus pharetra mollis. Nulla facilisi. Donec eleifend purus nec feugiat gravida. Sed euismod risus quis lacinia cursus. Aliquam ultrices pharetra nunc, non sodales turpis pretium ac. Proin sagittis mollis lectus mollis rhoncus. Sed eu consequat quam, in lobortis sapien. In lobortis odio non luctus tempor. Aenean mattis, eros ac tempus ornare, tellus mi vehicula quam, sit amet ullamcorper mauris libero a nisl. Morbi vitae ex venenatis, rutrum tellus eget, rutrum leo. 
+<h3>Game Engines</h3>
+<div class="skills">
+  <div class="skill">
+    <i class="devicon-unity-plain colored"></i>
+    <span><b>Unity</b></span>
+  </div>
+  <div class="skill">
+    <i class="devicon-godot-plain colored"></i>
+    <span><b>Godot</b></span>
+  </div>
+</div>
+
+<h3>Version Control</h3>
+<div class="skills">
+  <div class="skill">
+    <i class="devicon-git-plain colored"></i>
+    <span><b>Git</b></span>
+  </div>
+  <div class="skill">
+    <i class="devicon-github-plain colored"></i>
+    <span><b>GitHub</b></span>
+  </div>
+  <div class="skill">
+    <i class="devicon-gitlab-plain colored"></i>
+    <span><b>GitLab</b></span>
+  </div>
+</div>
+
+<h3>Databases</h3>
+<div class="skills">
+  <div class="skill">
+    <i class="devicon-postgresql-plain colored"></i>
+    <span><b>PostgreSQL</b></span>
+  </div>
+  <div class="skill">
+    <i class="devicon-mysql-plain colored"></i>
+    <span><b>MySQL</b></span>
+  </div>
+  <div class="skill">
+    <i class="devicon-mongodb-plain colored"></i>
+    <span><b>MongoDB</b></span>
+  </div>
+</div>
+
+<h3>Other Tools</h3>
+<div class="skills">
+  <div class="skill">
+    <i class="devicon-linux-plain colored"></i>
+    <span><b>Linux</b></span>
+  </div>
+  <div class="skill">
+    <i class="devicon-docker-plain colored"></i>
+    <span><b>Docker</b></span>
+  </div>
+  <div class="skill">
+    <i class="devicon-markdown-original colored"></i>
+    <span><b>Markdown</b></span>
+  </div>
+</div>
+
+<h2>Projects</h2>
+<p>While I don't yet have any professional projects to showcase, my portfolio is filled with <a href="/projects/">personal and academic projects</a> that reflect my passion and dedication to game development.</p>
+
+<h2>Inspiration</h2>
+<p>My love for video games began with the classic Tomb Raider from '96 on my grandfather's computer, and it continues to grow with innovative titles like Hellblade: Senua's Sacrifice, Sekiro, and Breath of the Wild.</p>
+
+<h2>Philosophy</h2>
+<p>My philosophy is to innovate in every field I touch, learning from existing foundations and striving to improve or create something groundbreaking.</p>
+
+<h2>Interests</h2>
+<p>Outside of game development, I enjoy playing handball, listening to music, and I have a deep passion for the cyberpunk genre, inspired by works like Blade Runner, Ghost in the Shell, and Akira.</p>
+
+<p>Thank you for visiting my portfolio. I look forward to connecting with fellow enthusiasts and professionals in the industry!</p>
