--- a/index.html
+++ b/index.html
@@ -122,6 +122,19 @@ title: About
 <h2>Projects</h2>
 <p>While I don't yet have any professional projects to showcase, my portfolio is filled with <a href="/projects/">personal and academic projects</a> that reflect my passion and dedication to game development.</p>
 
+<h2>Education</h2>
+<p>TODO</p>
+
+<h2>Experience</h2>
+<p>TODO</p>
+
+<h2>Soft Skills</h2>
+<ul>
+  <li>TODO</li>
+  <li>TODO</li>
+  <li>TODO</li>
+</ul>
+
 <h2>Inspiration</h2>
 <p>My love for video games began with the classic Tomb Raider from '96 on my grandfather's computer, and it continues to grow with innovative titles like Hellblade: Senua's Sacrifice, Sekiro, and Breath of the Wild.</p>
 
