--- a/index.html
+++ b/index.html
@@ -123,7 +123,17 @@ title: About
 <p>While I don't yet have any professional projects to showcase, my portfolio is filled with <a href="/projects/">personal and academic projects</a> that reflect my passion and dedication to game development.</p>
 
 <h2>Education</h2>
-<p>TODO</p>
+<h3>Bachelor's Degree in Video Game Design and Development</h3>
+<p><b>Centre de la Imatge i la Tecnologia Multimèdia (CITM UPC)</b><br>
+  <i>2022 - 2026</i></p>
+
+<h3>Technical Superior, Computer Programming, Specific Applications</h3>
+<p><b>Institut Escola del Treball</b><br>
+  <i>2020 - 2022</i></p>
+
+<h3>Technical, Network and Systems Administration</h3>
+<p><b>Institut Escola del Treball</b><br>
+  <i>2018 - 2020</i></p>
 
 <h2>Experience</h2>
 <p>TODO</p>
