added experience and removed soft skills

--- a/index.html
+++ b/index.html
@@ -133,17 +133,27 @@ title: About
 
 <h3>Technical, Network and Systems Administration</h3>
 <p><b>Institut Escola del Treball</b><br>
-  <i>2018 - 2020</i></p>
+<i>2018 - 2020</i></p>
 
 <h2>Experience</h2>
-<p>TODO</p>
+<h3>Full Stack Developer</h3>
+<p><b>TAS Consultoría</b><br>
+  <i>7 months</i><br>
+  Full-time</p>
 
-<h2>Soft Skills</h2>
-<ul>
-  <li>TODO</li>
-  <li>TODO</li>
-  <li>TODO</li>
-</ul>
+<h3>System Administrator</h3>
+<p><b>INS Can Mas</b><br>
+  <i>4 months</i><br>
+  Apprenticeship</p>  
+
+<h3>Product Advisor</h3>
+<p><b>SALESLAND</b><br>
+  <i>3 months</i><br>
+  Part-time</p>
+
+<p><b>Beonit</b><br>
+  <i>4 months</i><br>
+  Part-time</p>
 
 <h2>Interests</h2>
 <p>Outside of game development, I enjoy playing handball, listening to music, and I have a deep passion for the cyberpunk genre, inspired by works like Blade Runner, Ghost in the Shell, and Akira.</p>
