fix paths for baseurl

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: About
 <!-- Add this to your header -->
 <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" /> 
 
-<img src="/assets/imagen.png" alt="Image">
+<img src="{{ site.baseurl }}/assets/imagen.png" alt="Image">
 
 <b>Mario Dorado Martínez</b>
 
