--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ title: About
 </div>
 
 <h2>Projects</h2>
-<p>While I don't yet have any professional projects to showcase, my portfolio is filled with <a href="/projects/">personal and academic projects</a> that reflect my passion and dedication to game development.</p>
+<p>While I don't yet have any professional projects to showcase, my portfolio is filled with <a href="{{ site.baseurl }}/projects/">personal and academic projects</a> that reflect my passion and dedication to game development.</p>
 
 <h2>Education</h2>
 <h3>Bachelor's Degree in Video Game Design and Development</h3>
