literaly remade the website from scratch xd

--- a/index.html
+++ b/index.html
@@ -1,153 +1,8 @@
 ---
 layout: default
-title: About
+title: Home
 ---
 
-<!-- Add this to your header -->
-<link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" /> 
+# Welcome to My Portfolio
 
-<h2>About Me</h2>
-<p>Hello! I'm Mario Dorado Martínez, a 22-year-old third-year student at <a href="https://www.citm.upc.edu/esp/estudis/graus-videojocs/">CITM UPC</a>, specializing in Game Design and Development. Alongside my primary studies, I have a background in developing multi-platform applications and system administration.</p>
-
-<h2>Technical Skills</h2>
-<p>My technical skills include proficiency in <b>C++</b>, <b>C</b>, and <b>C#</b> specifically for game development. I'm also learning <b>Rust</b> with an interest in its potential for game development. Apart from these, I've worked with other programming languages:</p>
-
-<div class="skills-section">
-  <h3>Languages</h3>
-  <h4>Game Dev Languages</h4>
-  <div class="skills">
-    <div class="skill">
-      <i class="devicon-c-plain colored"></i>
-      <span><b>C</b></span>
-    </div>
-    <div class="skill">
-      <i class="devicon-cplusplus-plain colored"></i>
-      <span><b>C++</b></span>
-    </div>
-    <div class="skill">
-      <i class="devicon-csharp-plain colored"></i>
-      <span><b>C#</b></span>
-    </div>
-  </div>
-
-  <h4>Other</h4>
-  <div class="skills">
-    <div class="skill">
-      <i class="devicon-java-plain colored"></i>
-      <span><b>Java</b></span>
-    </div>
-    <div class="skill">
-      <i class="devicon-bash-plain colored"></i>
-      <span><b>Bash</b></span>
-    </div>
-    <div class="skill">
-      <i class="devicon-javascript-plain colored"></i>
-      <span><b>JavaScript</b></span>
-    </div>
-    <div class="skill">
-      <i class="devicon-python-plain colored"></i>
-      <span><b>Python</b></span>
-    </div>
-  </div>
-</div>
-
-<h3>Game Engines</h3>
-<div class="skills">
-  <div class="skill">
-    <i class="devicon-unity-plain colored"></i>
-    <span><b>Unity</b></span>
-  </div>
-  <div class="skill">
-    <i class="devicon-godot-plain colored"></i>
-    <span><b>Godot</b></span>
-  </div>
-</div>
-
-<h3>Version Control</h3>
-<div class="skills">
-  <div class="skill">
-    <i class="devicon-git-plain colored"></i>
-    <span><b>Git</b></span>
-  </div>
-  <div class="skill">
-    <i class="devicon-github-plain colored"></i>
-    <span><b>GitHub</b></span>
-  </div>
-  <div class="skill">
-    <i class="devicon-gitlab-plain colored"></i>
-    <span><b>GitLab</b></span>
-  </div>
-</div>
-
-<h3>Databases</h3>
-<div class="skills">
-  <div class="skill">
-    <i class="devicon-postgresql-plain colored"></i>
-    <span><b>PostgreSQL</b></span>
-  </div>
-  <div class="skill">
-    <i class="devicon-mysql-plain colored"></i>
-    <span><b>MySQL</b></span>
-  </div>
-  <div class="skill">
-    <i class="devicon-mongodb-plain colored"></i>
-    <span><b>MongoDB</b></span>
-  </div>
-</div>
-
-<h3>Other Tools</h3>
-<div class="skills">
-  <div class="skill">
-    <i class="devicon-linux-plain colored"></i>
-    <span><b>Linux</b></span>
-  </div>
-  <div class="skill">
-    <i class="devicon-docker-plain colored"></i>
-    <span><b>Docker</b></span>
-  </div>
-  <div class="skill">
-    <i class="devicon-markdown-original colored"></i>
-    <span><b>Markdown</b></span>
-  </div>
-</div>
-
-<h2>Projects</h2>
-<p>While I don't yet have any professional projects to showcase, my portfolio is filled with <a href="{{ site.baseurl }}/projects/">personal and academic projects</a> that reflect my passion and dedication to game development.</p>
-
-<h2>Education</h2>
-<h3>Bachelor's Degree in Video Game Design and Development</h3>
-<p><b>Centre de la Imatge i la Tecnologia Multimèdia (CITM UPC)</b><br>
-  <i>2022 - 2026</i></p>
-
-<h3>Technical Superior, Computer Programming, Specific Applications</h3>
-<p><b>Institut Escola del Treball</b><br>
-  <i>2020 - 2022</i></p>
-
-<h3>Technical, Network and Systems Administration</h3>
-<p><b>Institut Escola del Treball</b><br>
-<i>2018 - 2020</i></p>
-
-<h2>Experience</h2>
-<h3>Full Stack Developer</h3>
-<p><b>TAS Consultoría</b><br>
-  <i>7 months</i><br>
-  Full-time</p>
-
-<h3>System Administrator</h3>
-<p><b>INS Can Mas</b><br>
-  <i>4 months</i><br>
-  Apprenticeship</p>  
-
-<h3>Product Advisor</h3>
-<p><b>SALESLAND</b><br>
-  <i>3 months</i><br>
-  Part-time</p>
-
-<p><b>Beonit</b><br>
-  <i>4 months</i><br>
-  Part-time</p>
-
-<h2>Interests</h2>
-<p>Outside of game development, I enjoy playing handball, listening to music, and I have a deep passion for the cyberpunk genre, inspired by works like Blade Runner, Ghost in the Shell, and Akira.</p>
-
-<p>Thank you for visiting my portfolio. I look forward to connecting with fellow enthusiasts and professionals in the industry!</p>
+This is the home page of my portfolio.
