--- a/_i18n/en/projects.html
+++ b/_i18n/en/projects.html
@@ -1,6 +1,19 @@
-Projects
+<h1 class="page-title">Projects</h1>
 
-{% for project in site.projects %}
-  <h2>{{ project.title | translate }}</h2>
-  <p>{{ project.description | translate }}</p>
-{% endfor %}
+<div class="projects-grid">
+  {% for project in site.projects %}
+    <a href="{{ project.url | relative_url }}" class="project-card">
+      {% if project.image %}
+        <img src="{{ project.image | relative_url }}" alt="{{ project.title }}" class="project-image">
+      {% endif %}
+      <h2>{{ project.title }}</h2>
+      <p class="project-date">{{ project.date | date: "%B %Y" }}</p>
+      <p class="project-description">{{ project.description }}</p>
+      <div class="project-technologies">
+        {% for tech in project.technologies %}
+          <span class="tech-tag">{{ tech }}</span>
+        {% endfor %}
+      </div>
+    </a>
+  {% endfor %}
+</div>
