translate setup to index.html

--- a/index.html
+++ b/index.html
@@ -3,6 +3,4 @@ layout: default
 title: Home
 ---
 
-# Welcome to My Portfolio
-
-This is the home page of my portfolio.
+{% translate_file index.html %}
